    files are missing when upgrading.
  * If GRUB Legacy files are present when upgrading, scan boot sectors of
    all disks for GRUB 2.  If we find GRUB 2 installed anywhere, then ask
    the user if they want to finish conversion to GRUB 2, and warn them that
    not doing so may render the system unbootable (closes: #586143).

 -- Colin Watson <cjwatson@debian.org>  Fri, 18 Jun 2010 21:50:49 +0100

grub2 (1.98+20100614-2) unstable; urgency=low

  * Build-depend on gcc-4.4-multilib on i386 and kopensolaris-i386 too, in
    order to build grub-efi-amd64.
  * Ignore non-option arguments in grub-mkconfig (closes: #586056).

 -- Colin Watson <cjwatson@debian.org>  Wed, 16 Jun 2010 17:58:48 +0100

grub2 (1.98+20100614-1) unstable; urgency=low

  * New Bazaar snapshot.
    - Make target-related error messages from grub-mkimage slightly more
      helpful (closes: #584415).
    - Fix underquoting that broke savedefault (thanks, Mario 'BitKoenig'
      Holbe; closes: #584812).
    - Expand 'info grub' substantially, including a new section on
      configuring authentication (closes: #584822).
    - Give all manual pages proper NAME sections (closes: #496706).

  * Update 915resolution from grub-extras:
    - Fix a hang with 945GME (thanks, Sergio Perticone; closes: #582142).

  [ Colin Watson ]
  * Disable grub-emu on sparc for the time being.  We're currently trying to
    use TARGET_* flags to build it, which won't work.
  * Don't build-depend on libsdl1.2-dev on hurd-i386.  Although
    libsdl1.2-dev exists there, it's currently uninstallable due to missing
    libpulse-dev, and we can happily live without it for now.
  * kfreebsd-amd64 needs gcc-4.4-multilib too (closes: #585668).
  * Warn and return without error from prepare_grub_to_access_device if
    /boot is a dm-crypt device (thanks, Marc Haber; closes: #542165).
  * Make /etc/grub.d/05_debian_theme usable by shells other than bash
    (thanks, Alex Chiang; closes: #585561).