@@ -40,6 +40,21 @@ Description: GRUB install devices:
  However, this forces GRUB to use the blocklist mechanism, which makes it
  less reliable, and therefore is not recommended.
 
+Template: grub-pc/install_devices_empty
+Type: boolean
+Default: false
+_Description: Continue without installing GRUB?
+ You chose not to install GRUB to any devices.  If you continue, the boot
+ loader may not be properly configured, and when your computer next starts
+ up it will use whatever was previously in the boot sector.  If there is an
+ earlier version of GRUB 2 in the boot sector, it may be unable to load
+ modules or handle the current configuration file.
+ .
+ If you are already running a different boot loader and want to carry on
+ doing so, or if this is a special environment where you do not need a boot
+ loader, then you should continue anyway.  Otherwise, you should install
+ GRUB somewhere.
+
 Template: grub-pc/postrm_purge_boot_grub
 Type: boolean
 Default: false
